--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <title>ClawSolved – Enterprise AI That Endures</title>
   <meta name="description" content="OpenClaw™ resilience architecture. Production AI systems engineered to withstand disruption, evolution, and uncertainty. For leaders who demand stability."/>
 
-  <!-- Google Fonts: Cormorant Garamond (elegant serif) + DM Sans (refined sans) -->
+  <!-- Google Fonts: Outfit (geometric display) + Work Sans (refined body) -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500;600;700&family=DM+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;500;600;700;800&family=Work+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
 
   <style>
     :root {
@@ -23,8 +23,8 @@
       --gold: #d4af37;
       --gold-muted: #9a8043;
       
-      --serif: 'Cormorant Garamond', Georgia, serif;
-      --sans: 'DM Sans', -apple-system, BlinkMacSystemFont, sans-serif;
+      --display: 'Outfit', -apple-system, BlinkMacSystemFont, sans-serif;
+      --sans: 'Work Sans', -apple-system, BlinkMacSystemFont, sans-serif;
     }
 
     * {
@@ -110,9 +110,9 @@
     }
 
     .brand-name {
-      font-family: var(--serif);
+      font-family: var(--display);
       font-size: 1.8rem;
-      font-weight: 600;
+      font-weight: 700;
       letter-spacing: -0.5px;
       color: var(--cream);
     }
@@ -122,10 +122,10 @@
       background: transparent;
       border: 1.5px solid rgba(212, 175, 55, 0.4);
       color: var(--gold);
-      font-family: var(--sans);
+      font-family: var(--display);
       font-size: 0.95rem;
-      font-weight: 600;
-      letter-spacing: 0.3px;
+      font-weight: 700;
+      letter-spacing: 0.5px;
       border-radius: 6px;
       cursor: pointer;
       transition: all 0.3s ease;
@@ -179,18 +179,18 @@
     }
 
     h1 {
-      font-family: var(--serif);
+      font-family: var(--display);
       font-size: clamp(3.5rem, 5.5vw, 5.2rem);
-      font-weight: 600;
+      font-weight: 700;
       line-height: 1.05;
       margin-bottom: 32px;
-      letter-spacing: -1px;
+      letter-spacing: -1.5px;
       color: #ffffff;
     }
 
     h1 .emphasis {
       color: var(--gold);
-      font-style: italic;
+      font-weight: 700;
     }
 
     .lead {
@@ -243,9 +243,9 @@
       background: linear-gradient(135deg, var(--accent) 0%, #0550ae 100%);
       border: none;
       color: white;
-      font-family: var(--sans);
+      font-family: var(--display);
       font-size: 1.05rem;
-      font-weight: 600;
+      font-weight: 700;
       letter-spacing: 0.3px;
       border-radius: 8px;
       cursor: pointer;
@@ -293,12 +293,12 @@
     }
 
     .feature-card h3 {
-      font-family: var(--serif);
+      font-family: var(--display);
       font-size: 1.5rem;
-      font-weight: 600;
+      font-weight: 700;
       margin-bottom: 12px;
       color: var(--cream);
-      letter-spacing: -0.3px;
+      letter-spacing: -0.5px;
     }
 
     .feature-card p {
@@ -321,12 +321,12 @@
     }
 
     .section-header h2 {
-      font-family: var(--serif);
+      font-family: var(--display);
       font-size: clamp(2.5rem, 4vw, 3.5rem);
-      font-weight: 600;
+      font-weight: 700;
       margin-bottom: 20px;
       color: #ffffff;
-      letter-spacing: -0.8px;
+      letter-spacing: -1px;
     }
 
     .section-header .subtitle {
@@ -347,22 +347,22 @@
     }
 
     .prop-number {
-      font-family: var(--serif);
+      font-family: var(--display);
       font-size: 3.5rem;
-      font-weight: 600;
+      font-weight: 700;
       color: var(--gold);
       margin-bottom: 16px;
       line-height: 1;
     }
 
     .prop-item h4 {
-      font-family: var(--sans);
+      font-family: var(--display);
       font-size: 1.1rem;
-      font-weight: 600;
+      font-weight: 700;
       margin-bottom: 12px;
       color: var(--cream);
       text-transform: uppercase;
-      letter-spacing: 1px;
+      letter-spacing: 1.5px;
     }
 
     .prop-item p {
@@ -379,12 +379,12 @@
     }
 
     .footer-cta h2 {
-      font-family: var(--serif);
+      font-family: var(--display);
       font-size: clamp(2.5rem, 4vw, 3.2rem);
-      font-weight: 600;
+      font-weight: 700;
       margin-bottom: 32px;
       color: #ffffff;
-      letter-spacing: -0.8px;
+      letter-spacing: -1px;
     }
 
     .footer-cta p {
